--- a/Fundraising/wwwroot/MemberCentre/UserOrder.html
+++ b/Fundraising/wwwroot/MemberCentre/UserOrder.html
@@ -62,7 +62,7 @@
                     :src="order.productPhoto"
                     class="img-fluid rounded-start p-2 pt-3"
                     alt="..."
-                    style="height: 80%; object-fit: cover"
+                    style="height: 200px; object-fit: cover"
                 /></a>
               </div>
 
